--- a/src/index.html
+++ b/src/index.html
@@ -8,42 +8,51 @@
     <script src="./scripts/script.js"></script>
   </head>
   <body class="body">
-    <div class="todo">
-      <h1 class="todo__title">My checklist</h1>
-      <div class="todo__new">
-        <input class="todo__new-task" type="text" placeholder="New Task" />
-        <button class="todo__add">+</button>
-      </div>
-      <ul class="todo__list"></ul>
-    </div>
+    <main class="main">
+      <section class="todo">
+        <h1 class="todo__title">My checklist</h1>
+        <form class="todo__form">
+          <input
+            class="todo__input"
+            type="text"
+            placeholder="New Task"
+            name="todo__text"
+            required />
+          <button type="submit" class="todo__btn todo__btn--add">+</button>
+        </form>
+        <ul class="todo__list"></ul>
+      </section>
+    </main>
     <div class="modal">
       <div class="modal__content">
-        <span class="modal__priority">Priority</span>
-        <button class="modal__close"></button>
-        <ul class="modal__priority-list">
-          <li class="modal__priority-high">
-            <button class="modal__priority-button"></button>
+        <h3 class="modal__priority">Priority</h3>
+        <button type="button" class="modal__btn modal__btn--close"></button>
+        <ul class="modal__list">
+          <li class="modal__item modal__item--high">
+            <button type="button" class="modal__btn modal__btn--high"></button>
           </li>
-          <li class="modal__priority-normal">
-            <button class="modal__priority-button"></button>
+          <li class="modal__item modal__item--normal">
+            <button
+              type="button"
+              class="modal__btn modal__btn--normal"></button>
           </li>
-          <li class="modal__priority-low">
-            <button class="modal__priority-button"></button>
+          <li class="modal__item modal__item--low">
+            <button type="button" class="modal__btn modal__btn--low"></button>
           </li>
         </ul>
-        <hr class="modal__decoration" />
-        <button class="modal__delete-task">Delete Task</button>
+        <hr class="modal__hr" />
+        <button type="button" class="modal__btn modal__btn--remove">
+          Delete Task
+        </button>
       </div>
     </div>
     <script src="index.js"></script>
   </body>
-  <template class="todo__card">
+  <template class="todo__template">
     <li class="todo__item">
       <input class="todo__checkbox" type="checkbox" />
       <p class="todo__task"></p>
-      <button class="todo__up"></button>
-      <button class="todo__down"></button>
-      <button class="todo__fuctional"></button>
+      <button class="todo__btn todo__btn--functional"></button>
     </li>
   </template>
 </html>
